[tool.poetry]
name = "dbt-transformation-inocircle-day"
version = "0.1.0"
description = ""
authors = ["Kolja Maier <kolja.maier@inovex.de>"]

[tool.poetry.dependencies]
python = "^3.9"
dbt-databricks = "^1.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
